--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             </div>
         </div>
     </footer>
-    <script src="/js/script.js"> </script>
+<script src="./js/script.js" defer></script>
 
 </body>
 </html>
