--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Anirudh</title>
     
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <a href="#">Portfolio</a>
+                <a href="#">Anirudh</a>
             </div>
             <nav class="navbar">
                 <ul class="nav-list">
