--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                   <button class="filter-btn active" data-filter="all">All</button>
                   <button class="filter-btn" data-filter="design">Design</button>
                   <button class="filter-btn" data-filter="art">Art</button>
-                  <button class="filter-btn" data-filter="photography">Photography</button>
+                  <button class="filter-btn" data-filter="freelance">freelance</button>
               </div>
               
               <div class="gallery-grid">
@@ -231,12 +231,12 @@
                 
                 <!-- Add 8 more items with appropriate classes -->
                 <!-- Example Photography Item -->
-                <div class="gallery-item photography clickable-item" data-category="photography">
+                <div class="gallery-item freelance clickable-item" data-category="freelance">
                   <img src="assects/freepik__upload__2178.jpeg" alt="Nature Photo" class="gallery-img">
                   <div class="gallery-overlay">
                     <div class="overlay-content">
-                      <h3>Forest Landscape</h3>
-                      <p>Nature Series</p>
+                      <h3>freelance</h3>
+                      <p>freelance website Development</p>
                       <i class="fas fa-expand zoom-icon"></i>
                     </div>
                   </div>
