--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-container">
-                    <img src="/assects/dq2.jpg" alt="Anirudh P - Full Stack Web Developer">
+                    <img src="assects/Anirudh.jpg" alt="Anirudh P - Full Stack Web Developer">
                 </div>
                 <div class="floating-circle circle-1">→</div>
             </div>
