Update logo to be a link in navigation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="dark-mode">
     <!-- Navigation -->
     <nav>
-        <div class="logo">AP</div>
+        <div class="logo"><a href="#home">AP</a></div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#experience">Experience</a></li>
