Fix resume link and adjust image alt text

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <span>Get In Touch</span>
                         <span>→</span>
                     </a>
-                    <a href="/assects/AnirudhP.pdf.pdf" class="cta-button cta-secondary" onclick="downloadResume(event)">
+                    <a href="https:assects/Anirudh.pdf.pdf" class="cta-button cta-secondary" onclick="downloadResume(event)">
                         <span>Download Resume</span>
                         <span>↓</span>
                     </a>
@@ -113,7 +113,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-container">
-                    <img src="assects/Anirudh.jpg" alt="Anirudh P - Full Stack Web Developer">
+                    <img src="assects/Anirudh.jpg" alt=" Anirudh P - Full Stack Web Developer">
                 </div>
                 <div class="floating-circle circle-1">→</div>
             </div>
