--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anirudh P - Full Stack Web Developer Portfolio</title>
+    <title>Anirudh P - Front-end Web Developer Portfolio</title>
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="dark-mode">
@@ -81,7 +81,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h2>Anirudh P</h2>
-                <h1>FULL STACK<br>WEB DEVELOPER</h1>
+                <h1>FRONT-END<br>WEB DEVELOPER</h1>
                 <p>Results-driven Web Developer with 3 years of experience specializing in HTML, CSS, JavaScript, React.js, and WordPress development. Building responsive, user-friendly, and performance-optimized web applications.</p>
                 
                 <div class="contact-info">
